[gd_scene load_steps=2 format=3 uid="uid://raidscene"]

[ext_resource type="Script" path="res://scenes/raid_scene.gd" id="1"]

[node name="RaidScene" type="Node2D"]
script = SubResource("1")

[node name="RaidArena" type="Node2D" parent="."]

[node name="PlayerTeam" type="Node2D" parent="."]

[node name="EnemyTeam" type="Node2D" parent="."]

[node name="BossHealthBar" type="ProgressBar" parent="."]
anchor_left = 0.35
anchor_top = 0.05
anchor_right = 0.65
anchor_bottom = 0.1
max_value = 1000.0
value = 1000.0
modulate = Color.RED
custom_minimum_size = Vector2(0, 20)

[node name="WaveLabel" type="Label" parent="."]
anchor_left = 0.45
anchor_top = 0.15
anchor_right = 0.55
anchor_bottom = 0.2
text = "Wave 1 / 1"
modulate = Color.WHITE

[node name="CombatManager" type="Node" parent="."]

[node name="RaidTimer" type="Timer" parent="."]
